--- a/CLC/WebContent/Login.xhtml
+++ b/CLC/WebContent/Login.xhtml
@@ -8,23 +8,24 @@
 </h:head>
 <h:body>
 	<ui:composition template="layouts/commonLayout.xhtml">
+		<ui:define name ="title">Login</ui:define>
 		<ui:define name="content">
-			<h2>Login</h2>
-			<h:form>
-				<label> Username: </label>
-				<h:inputText label="username" id="username" value="#{user.username}"
-					required="true" />
-				<h:message for="username" style="color: red" />
-				<label> Password: </label>
-				<h:inputText label="password" id="password" value="#{user.password}"
-					required="true" />
+			<div class="d-flex">
+			<h:form class="mx-auto mt-5 border p-4 bg-dark" >
+			<div class="form-group">
+			    <label for="username" class="text-light">Username</label>
+			    <h:inputText class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter Username" value="#{user.username}" />
+				<h:message for="username" style="color: red" />			    
+  			</div>
+  			<div class="form-group">
+			    <label for="password" class="text-light">Password</label>
+			    <h:inputText label="password" id="password" class="form-control"  placeholder="Enter Your Password" value="#{user.password}" />		    
 				<h:message for="password" style="color: red" />
-				<p>
+  			</div>
 					<h:commandButton value="Submit"
 						action="#{formController.loginAttempt(user)}" />
-				</p>
 			</h:form>
-			<h:messages />
+			</div>
 		</ui:define>
 	</ui:composition>
 </h:body>
