--- a/CLC/WebContent/LoginSuccess.xhtml
+++ b/CLC/WebContent/LoginSuccess.xhtml
@@ -11,8 +11,8 @@
 <h:body>
 	<ui:composition template="layouts/commonLayout.xhtml">
 		<ui:define name="content">
-			<h2>Category Page</h2>
-
+			<h2 class="p-3 mb-2 bg-primary text-center">Category Page</h2> 
+			<h:button value="Home" outcome="Login" />
 			<h1 class="greeting">Hello #{formController.user.username}. These are the categories </h1>
 			<div class= "d-flex flex-wrap">
 				<div class="card m-3 border bg-dark" style="width: 18rem;">
@@ -60,29 +60,28 @@
 				  </div>
 				</div>
 			</div>
-			<h:button value="Home" outcome="Login" />
 			
 			<div class="d-flex">
-			<h:form class="mx-auto mt-5 border p-4 bg-dark" >
+			<h:form class="mx-auto mt-3 border p-4 bg-dark" >
 			<div class="form-group">
 			    <label for="productName" class="text-light">Product Name:</label>
-			    <h:inputText class="form-control" id="productName" aria-describedby="productNameHelp" placeholder="Enter product name" value="#{formController.order.productName}" />
+			    <h:inputText class="form-control-sm" id="productName" aria-describedby="productNameHelp" placeholder="Enter product name" value="#{formController.order.productName}" />
 				<h:message for="productName" style="color: red" />			    
   			</div>
   			<div class="form-group">
 			    <label for="orderNumber" class="text-light">Order Number:</label>
-			    <h:inputText label="orderNumber" id="orderNumber" class="form-control"  placeholder="Enter order number" value="#{formController.order.orderNumber}" />		    
+			    <h:inputText label="orderNumber" id="orderNumber" class="form-control-sm"  placeholder="Enter order number" value="#{formController.order.orderNumber}" />		    
 				<h:message for="orderNumber" style="color: red" />
   			</div>
   			
   			<div class="form-group">
 			    <label for="price" class="text-light">Price:</label>
-			    <h:inputText class="form-control" id="price" aria-describedby="priceHelp" placeholder="Enter price" value="#{formController.order.price}" />
+			    <h:inputText class="form-control-sm" id="price" aria-describedby="priceHelp" placeholder="Enter price" value="#{formController.order.price}" />
 				<h:message for="price" style="color: red" />			    
   			</div>
   			<div class="form-group">
 			    <label for="password" class="text-light">Quantity:</label>
-			    <h:inputText label="quantity" id="quantity" class="form-control"  placeholder="Enter quantity" value="#{formController.order.quantity}" />		    
+			    <h:inputText label="quantity" id="quantity" class="form-control-sm"  placeholder="Enter quantity" value="#{formController.order.quantity}" />		    
 				<h:message for="quantity" style="color: red" />
   			</div>
 					<h:commandButton value="Submit"
