added changes to the login success

--- a/CLC/WebContent/LoginSuccess.xhtml
+++ b/CLC/WebContent/LoginSuccess.xhtml
@@ -51,7 +51,7 @@
 				    <h5 class="card-title text-light text-center">Frozen Food</h5>
 				  <h:graphicImage class="card-title" url="/resources/images/frozenfood.jpg" />
 				  <div class="card-body">
-				    <p class="text-light">Pizza Wings Tv-Dinners PopcornChicken Lasagna</p>
+				    <p class="text-light">Pizza Wings Tv-Dinners PopcornChicken Lasagna Smoothies</p>
 				  </div>
 				</div>
 			</div>
